trunk/Archive2/98/19c4e87693f241/output
main.cpp:4:1: warning: anonymous structs are a GNU extension [-Wgnu-anonymous-struct]
struct {
^
main.cpp:7:5: warning: anonymous types declared in an anonymous struct are an extension [-Wnested-anon-types]
    struct {
    ^
main.cpp:4:1: error: anonymous structs and classes must be class members
struct {
^
2 warnings and 1 error generated.
